web-ui/app/scss/styles.scss
/* ... */
section {
  display: inline-block;
  vertical-align: top;
  height: 100vh;
  overflow-y: scroll;
  &#top-pane {
    height: auto;
    overflow: hidden;
    background: darken($top_pane, 10%);
    border-top: 1px solid $top_pane;
    @include list-actions;
    #compose-search-trigger {
      padding: 4px;
    }
    #actions {
      ul {
        margin: 0;
        li {
          display: inline-block;
          margin-right: -5px;
          a {
            transition: background-color 150ms ease-out;
            background: lighten($top_pane, 10%);
            color: #FFF;
            font-size: 1.5em;
            display: block;
            padding: 14px 20px;
            margin: 0 1px 0px;
            opacity: 0.35;
            &.selected {
              background: $top_pane;
              opacity: 1;
              cursor: default;
            }
            &:hover {
              opacity: 1;
            }
          }
        }
      }
    }
    #search-trigger {
      padding: 5px;
      padding-left: 0;
      input {
        margin: 0;
        padding: 8px 30px;
        color: $navigation_background;
        background: white;
        border: none;
        transition: background-color 150ms ease-out;
        &:hover {
          background: darken(white, 2%);
        }
        &:focus {
          background: darken(white, 5%);
        }
      }
      &:before {
        font-family: "FontAwesome";
        content: "\f002";
        position: absolute;
        padding: 0 10px;
        top: 15px;
        color: #999;
      }
    }
  }

  &#left-pane {
    background-color: $navigation_background;
    color: white;
    nav {
      border-right: 1px solid lighten($navigation_background, 10%);
      ul#default-tag-list, #custom-tag-list {
        li {
          transition: background-color 150ms ease-out;
          padding: 2px 10px;
          cursor: pointer;
          &:hover {
            background: #CCC;
            color: $navigation_background;
          }
          &.selected {
            font-weight: bold;
            background: $contrast;
            color: $navigation_background;
          }
        }
      }

      ul#default-tag-list {
          .unread-count, .total-count {
          font-size: 0.7em;
          padding: 0px 5px 0;
          top: 1px;
          left: 0;
          border: 1px solid #FFF;
          border-bottom: 1px solid white;
          position: absolute;
          opacity: 0.95;
        }
        .total-count {
          background: #999;
        }
        span.tag-label {
          padding-left: 2px;
        }
        li {
          padding: 5px 10px 5px 18px;
          position: relative;
          @include searching(4px, 19px, #333, 0.7em);

          &:before {
            font-size: 1.5em;
            font-family: "FontAwesome";
            margin-right: 13px;
            font-weight: normal;
            position: relative;
            top: 2px;
          }
          &:nth-child(1) {
            &:before {
              content: "\f01c";
            }
          }
          &:nth-child(2) {
            &:before {
              content: "\f1d8";
            }
          }
          &:nth-child(3) {
            &:before {
              content: "\f040";
            }
          }
          &:nth-child(4) {
            &:before {
              content: "\f014";
            }
          }
          &:nth-child(5) {
            &:before {
              content: "\f187";
            }
          }
        }
      }

      ul#custom-tag-list {
        visibility: hidden;
        opacity: 0;
        transition-duration: 500ms;
        height: 220px;
        overflow: auto;
        background-color: lighten($navigation_background,1);

        li {
          white-space: nowrap;
          overflow: hidden;
          font-size: 0.8em;
          padding: 5px 10px 5px 15px;

          &.custom-tag {
            text-overflow: ellipsis;
          }

          span.tag-label {
            padding: 5px 20px 5px 38px;
          }
        }
      }

      ul#custom-tag-list.expanded {
        visibility: visible;
        opacity: 1;
      }

      div.tags-icon {
        border-top: 1px solid white;
        padding-top: 25px;
        margin-bottom: 20px;
        i {
          font-size: 1.5em;
          font-family: "FontAwesome";
          margin-right: 13px;
          font-weight: normal;
          position: relative;
          top: 2px;
          left: 16px;
        }
        span.tag-label {
          font-size: 0.9rem;
          padding-left: 16px;
          margin-bottom: 10px;
        }
      }

      ul#logout {
        li {
          color: $action_buttons;
          background-color: $navigation_background;
          padding: 5px 10px;
          position: relative;
          @include searching(4px, 19px, #333, 0.7em);

          &:hover {
          background-color: $action_buttons;
          color: $navigation_background;
          }

          div {
            padding-left: 7px;
            &:before {
              font-size: 1.5em;
              font-family: "FontAwesome";
              margin-right: 13px;
              font-weight: normal;
              position: relative;
              top: 2px;
            }
          }
        }
      }

      h3 {
        color: white;
        text-transform: uppercase;
        font-size: 0.6em;
        padding: 5px;
        font-weight: 600;
        margin: 0 10px;
        border-bottom: 1px dotted lighten($navigation_background, 10%);
      }
    }
  }

  &#middle-pane {
    background: lighten($contrast, 2%);
    @include email-list;
  }

  &#right-pane {
    padding: 0 10px 60px 0px;
    background: #FFF;
    box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.12);
    z-index: 2;
    overflow-y: auto;
    @include read-msg;
    [id^=fullView-] {
      position: relative;
    }
  }
}

.unread-count {
  @include mail-count($secondary_callout);
}
.total-count {
  @include mail-count(#999);
}
/* ... */

